syntax = 'proto3';

option go_package = "gitlab.ozon.dev/egor.linkinked/kartashov-egor/internal/grpcapi/send_report";

package send_report;

import "google/protobuf/timestamp.proto";

service ReportSender {
  rpc SendReport(SendReportRequest) returns (SendReportResponse) {};
}

message SendReportRequest {
  string payload = 1;
  int64 userID = 2;
  string currency = 3;
  int32 period = 4;
  string format = 5;
  google.protobuf.Timestamp date = 6;
}

message SendReportResponse {
}
